--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="css/default.css">
-    <link rel="stylesheet" href="css/github-markdown.css">
+    <link rel="stylesheet" href="css/markdown.css">
+    <link rel="stylesheet" href="css/markdown-theme.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body style="margin: 0px; background-color: #eaeaea;">
+  <body style="margin: 0px; overflow-y:scroll; background-color: #eaeaea;">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
