--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/markdown-theme.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body style="margin: 0px; overflow-y:scroll;">
+  <body style="margin: 0px; overflow-y:auto;background-color: #eaeaea">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
