--- a/public/index.html
+++ b/public/index.html
@@ -1,84 +1,87 @@
 <!DOCTYPE html>
 <html lang="">
-  <script>
-    (function () {
-      // goTop.addEventListener('click', function () {
-      //     window.scroll(0, 0);
-      // }, false);
-      window.addEventListener('scroll', function () {
-          var goTop = document.getElementById('go-top');
-          var mainContainer = document.querySelector('.main-container');
-          // goTop.addEventListener('click', function () {
-          //     window.scroll(0, 0);
-          // }, false);
-          if(goTop&&mainContainer){
-            var right = document.body.offsetWidth - mainContainer.getBoundingClientRect().right;
-          var scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
-          goTop.style.right = right + 10 + 'px'
-          scrollTop > 700 && (goTop.style.display = "block");
-          scrollTop <= 700 && (goTop.style.display = "none");
-          }
-      });
+<script>
+
+  //回到顶部监听
+  (function () {
+    window.addEventListener('scroll', function () {
+      var goTop = document.getElementById('go-top');
+      var mainContainer = document.querySelector('.main-container');
+      if (goTop && mainContainer) {
+        var right = document.body.offsetWidth - mainContainer.getBoundingClientRect().right;
+        var scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
+        goTop.style.right = right + 10 + 'px'
+        scrollTop > 700 && (goTop.style.display = "block");
+        scrollTop <= 700 && (goTop.style.display = "none");
+      }
+    });
   })();
 
   (function () {
-  var h2 = document.querySelectorAll('article h2');
-  var h3 = document.querySelectorAll('article h3');
-  var linkList = document.querySelectorAll('#sidebar-toc a');
 
-  function findLinkElement(name) {
-    for (var i = 0; i < linkList.length; i++) {
-      var items = linkList[i].href.split('#');
-      if (items && items[items.length - 1] === encodeURIComponent(name)) {
-        return i;
-      }
-    }
-    return -1;
-  }
+    window.addEventListener("scroll", function (e) {
 
-  function activeLink(titleList) {
-    var scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
-    for (var i = titleList.length - 1; i >= 0; i--) {
-      if (scrollTop - titleList[i].offsetTop > 0) {
-        var index = findLinkElement(titleList[i].id);
-        index != -1 && linkList[index].classList.add('gkt-sidebar-active');
-        break;
-      }
-    }
-  }
+      var h2 = document.querySelectorAll('.markdown-body h2');
+      var h3 = document.querySelectorAll('.markdown-body h3');
+      var linkList = document.querySelectorAll('.sidebar-toc ul ol a');
 
-  window.addEventListener("scroll", function (e) {
-    [].slice.call(linkList).forEach(function (link) {
-      link.classList.remove('gkt-sidebar-active');
-    })
-    activeLink(h2);
-  })
-})();
-
-(function () {
-      window.addEventListener('scroll', function () {
-          if (window.innerWidth < 768) {
-              return;
+      function findLinkElement(name) {
+        for (var i = 0; i < linkList.length; i++) {
+          var items = linkList[i].href.split('#');
+          if (items && items[items.length - 1] === encodeURIComponent(name)) {
+            return i;
           }
-          var nav = document.querySelector('#kk-header-nav');
-          var scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
-          var wrapper = document.querySelector(".gkt-sidebar-wrapper");
-          scrollTop > 50 && (nav.classList.add('hide')) ;
-          scrollTop <= 50 && (nav.classList.remove('hide'));
+        }
+        return -1;
+      }
 
-          scrollTop > 50  && wrapper.classList.add("gkt-sidebar-fixed");
-          scrollTop <= 50  && wrapper.classList.remove("gkt-sidebar-fixed");
-      });
-      var cateNavs = document.querySelectorAll('#gkt-cate-nav>nav>ul>li');
-      [].slice.call(cateNavs).forEach(function (item) {
-          var sub = item.querySelector('.gkt-sub-cate');
-          if (!sub) return;
-          item.addEventListener('mouseenter', function (e) { sub.style.display = 'block'; }, false);
-          item.addEventListener('mouseleave', function (e) { sub.style.display = 'none'; }, false);
+
+      function activeLink(titleList) {
+        var scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
+        for (var i = titleList.length - 1; i >= 0; i--) {
+          if (scrollTop - titleList[i].offsetTop > 0) {
+            var index = findLinkElement(titleList[i].id);
+            index != -1 && linkList[index].classList.add('sidebar-toc-active');
+            break;
+          }
+        }
+      }
+
+      [].slice.call(linkList).forEach(function (link) {
+        link.classList.remove('sidebar-toc-active');
       })
+      activeLink(h3);
+    })
   })();
 
-  
+
+
+
+  //滚动隐藏分栏监听
+  (function () {
+    window.addEventListener('scroll', function () {
+      if (window.innerWidth < 768) {
+        return;
+      }
+      var nav = document.querySelector('#kk-header-nav');
+      var scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
+      var wrapper = document.querySelector(".gkt-sidebar-wrapper");
+      scrollTop > 50 && (nav.classList.add('hide'));
+      scrollTop <= 50 && (nav.classList.remove('hide'));
+
+      scrollTop > 50 && wrapper.classList.add("gkt-sidebar-fixed");
+      scrollTop <= 50 && wrapper.classList.remove("gkt-sidebar-fixed");
+    });
+    var cateNavs = document.querySelectorAll('#gkt-cate-nav>nav>ul>li');
+    [].slice.call(cateNavs).forEach(function (item) {
+      var sub = item.querySelector('.gkt-sub-cate');
+      if (!sub) return;
+      item.addEventListener('mouseenter', function (e) { sub.style.display = 'block'; }, false);
+      item.addEventListener('mouseleave', function (e) { sub.style.display = 'none'; }, false);
+    })
+  })();
+
+
   //  (function () {
   //     var ele = getDom('.gkt-sidebar-content')
   //     if(!ele) return;
@@ -103,21 +106,26 @@
 
 </script>
 
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="css/gkt.css">
-    <link rel="stylesheet" href="css/markdown.css">
-    <link rel="stylesheet" href="css/markdown-theme.css">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body style="margin: 0px; overflow-y:auto;background-color: #f6f6f6">
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="stylesheet" href="css/gkt.css">
+  <link rel="stylesheet" href="css/markdown.css">
+  <link rel="stylesheet" href="css/markdown-theme.css">
+  <title>
+    <%= htmlWebpackPlugin.options.title %>
+  </title>
+</head>
+
+<body style="margin: 0px; overflow-y:auto;background-color: #f6f6f6">
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
