--- a/public/index.html
+++ b/public/index.html
@@ -55,8 +55,6 @@
   })();
 
 
-
-
   //滚动隐藏分栏监听
   (function () {
     window.addEventListener('scroll', function () {
@@ -81,7 +79,42 @@
     })
   })();
 
+  // var container = document.querySelector('.click-img-container')
+  // var targetImg = container.querySelector('img')
+  // // var imgs = document.querySelectorAll('.markdown-body img');
 
+  // targetImg.addEventListener('click', function (e) {
+  //   container.style.display = 'none';
+  //   e && e.stopPropagation && e.stopPropagation();
+  // }, false);
+  function image_close_click(img) {
+    var container = document.querySelector('#click-img-container')
+    container.style.display = 'none';
+    event && event.stopPropagation && event.stopPropagation();
+  }
+  function image_click(img) {
+    var container = document.querySelector("#click-img-container");
+    var targetImg = container.querySelector("img");
+    if (img) {
+      var rate = img.width / img.height;
+      var src = img.src;
+
+      event && event.stopPropagation && event.stopPropagation();
+      if (window.innerWidth < 980) {
+        return;
+      }
+      targetImg.style.height = targetImg.style.width = "auto";
+      if (window.innerWidth / window.innerHeight > rate) {
+        targetImg.style.height = window.innerHeight - 20 + "px";
+      } else {
+        targetImg.style.width = window.innerWidth - 20 + "px";
+      }
+      container.style.height = window.innerHeight + "px";
+      container.style.lineHeight = window.innerHeight + "px";
+      container.style.display = "block";
+      targetImg.src = src;
+    }
+  }
   //  (function () {
   //     var ele = getDom('.gkt-sidebar-content')
   //     if(!ele) return;
